mise en forme des dossier

--- a/exo vendredi 23-5/exo 2/index.html
+++ b/exo vendredi 23-5/exo 2/index.html
@@ -11,13 +11,13 @@
         <h1>Login Form</h1>
         <div class="i1">
             <div class="img">
-                <img src="user.png" alt="user">
+                <img src="img/user.png" alt="user">
             </div>
             <input type="email" name="email" id="email" placeholder="Email or Phone">
         </div> <br>
         <div class="i2">
             <div class="img">
-                <img src="lock.png" alt="password">
+                <img src="img/lock.png" alt="password">
             </div>
             <input type="password" name="password" id="password" placeholder="password">
         </div>
