--- a/exo jeudi 22-5/index.html
+++ b/exo jeudi 22-5/index.html
@@ -28,14 +28,14 @@
     <section class="s2">
         <div class="s2d1">
             <h1><span>Lo</span>gin</h1>
-            <label for="email"><img src="delete_8725669.png" alt=""><input type="email" name="email" id="email" placeholder="Enter your email"></label> <br><hr>
-            <label for="password"><img src="padlock_8040765.png" alt=""><input type="password" name="password" id="password" placeholder="Enter your password"></label> <br> <hr>
+            <label for="email"><img src="img/delete_8725669.png" alt=""><input type="email" name="email" id="email" placeholder="Enter your email"></label> <br><hr>
+            <label for="password"><img src="img/padlock_8040765.png" alt=""><input type="password" name="password" id="password" placeholder="Enter your password"></label> <br> <hr>
             <p><a href="#">Forgot password?</a></p>
             <button>Login</button>
             <p class="pd">Don't have an account? <a href="#">Signup now</a></p>
         </div>
         <div class="s2d2">
-            <img src="pexels-divinetechygirl-1181244.jpg" alt="">
+            <img src="img/pexels-divinetechygirl-1181244.jpg" alt="">
             <div class="fixe">
                 <h2>Every new friend is a new adventure.</h2>
                 <p>let's got connected</p>
@@ -57,11 +57,11 @@
                 <hr>
             </div>
             <button class="face">
-                <img src="facebook_3670124.png" alt="">
+                <img src="img/facebook_3670124.png" alt="">
                 <p>Login with Facebook</p>
             </button>
             <button class="google">
-                <img src="google-symbol_2875404.png" alt="">
+                <img src="img/google-symbol_2875404.png" alt="">
                 <p>Login with Google</p>
             </button>
         </div>
@@ -79,11 +79,11 @@
                 <hr>
             </div>
             <button class="face">
-                <img src="facebook_3670124.png" alt="">
+                <img src="img/facebook_3670124.png" alt="">
                 <p>Login with Facebook</p>
             </button>
             <button class="google">
-                <img src="google-symbol_2875404.png" alt="">
+                <img src="img/google-symbol_2875404.png" alt="">
                 <p>Login with Google</p>
             </button>
         </div>
