--- a/exo vendredi 23-5/exo 1/index.html
+++ b/exo vendredi 23-5/exo 1/index.html
@@ -11,11 +11,11 @@
         <main id="principal">
             <h1>Login Form</h1>
             <label for="email">
-                <img src="user_1077114.png" alt="user" class="img ip">
+                <img src="img/user_1077114.png" alt="user" class="img ip">
                 <input type="email" name="email" id="email" placeholder="Email or Phone">
             </label> <br>
             <label for="password">
-                <img src="lock_10264048.png" alt="lock" class="img ip">
+                <img src="img/lock_10264048.png" alt="lock" class="img ip">
                 <input type="password" name="password" id="password" placeholder="Password">
             </label>
             <p class="forgot"><a href="#">Forgot Password?</a></p>
@@ -23,11 +23,11 @@
             <P class="or">Or login with</P>
             <div class="button">
                 <button class="face">
-                    <img src="facebook_3670124.png" alt="facebook" class="img ib">
+                    <img src="img/facebook_3670124.png" alt="facebook" class="img ib">
                     <p>Facebook</p>
                 </button>
                 <button class="insta">
-                    <img src="social_12942181.png" alt="instagram" class="img ib">
+                    <img src="img/social_12942181.png" alt="instagram" class="img ib">
                     <p>Instagram</p>
                 </button>
             </div>
